--- a/app5K/index.html
+++ b/app5K/index.html
@@ -63,7 +63,8 @@
 
     <!-- ## CSS -->
 
-    <!-- lib --><link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css" type="text/css"><!-- SAKURA -->
+    <!-- lib --><link rel="stylesheet" href="app/vendor/sakura/css/normalize.css" type="text/css"><!-- NORMALIZE -->
+    <!-- lib --><link rel="stylesheet" href="app/vendor/sakura/css/sakura.css" type="text/css"><!-- SAKURA -->
     <!-- app --><link href="app/style/main.css" rel="stylesheet"  media="all" /><!-- / -->
     <!-- app --><link href="app/style/components.css" rel="stylesheet"  media="all" /><!-- / -->
 
@@ -156,7 +157,6 @@
     <!-- =================================================== [HEAD OTHERS] -->
 
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-
     <!-- Control the behavior of search engine crawling and indexing
          All Search Engines + Google Specific -->
     <meta name="robots" content="index,follow">
@@ -164,23 +164,45 @@
     <!-- / -->
 
 </head>
-<body class="design design-demoData layout-document js-document">
+<body class="y-layout design design-demoData">
 
 <!-- ================================================================= INTRO-->
 
-
-<header class="layer document-intro">
+<header class="document-intro" id="document_intro">
 </header>
 
-<article class="article" id="demo_waypoint">
+<article class="y-article" id="demo_waypoint">
 
     <h1>Test layout, <span class="gwrtsch">gwrtsch</span></h1>
 
-    <section class="layer block-note">
+    <section class="y-layer block-note">
         <p>
             Main goals. Gardening & War section WSJ Ushahidi circulation explainer Article Skimmer privacy Free Darko layoffs Romenesko, writing learnings I love the Weather & Opera section linking the audience knows more than I do discuss mthomps WSJ, CNN leaves it there crowdsourcing Foursquare Jeff Jarvis prostate serendipity #twittermakesyoustupid mathewi API.
         </p>
     </section>
+
+    <p>
+        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+    </p>
+
+    <div id="scroll_watcher">
+        <figure class="watcher">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 width="100px" height="42px" viewBox="0 0 100 42" style="enable-background:new 0 0 100 42;" xml:space="preserve">
+            <path d="M7.4,34.2c-0.8,1.7-8,0-7.3-1.9c0.6-1.9,27.8-1.8,30.5-2.4c9.1-2.1,17.8-4.5,26.5-8.2c2.7-1.2,37.8-12.8,36.6-16.4
+                C92.8,2.8,82.6,6,81.8,3.4s16.4-1.2,18.3-1c-1.2,2.2-4.3,15-7.9,13.1c-1.3-1.8,2.1-6,3-7.5c-10.4,7.3-23.6,12.6-35.7,16.3
+                c-7.8,2.4-17.3,8-25.6,7.8c-4-0.2-23.3,5-25.8,2.1C7.8,33.8,7.6,33.8,7.4,34.2z"/>
+            </svg>
+        </figure>
+    </div>
+
+    <p>
+        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+    </p>
+
+    <p>
+        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+    </p>
 
 </article>
 
