--- a/app5K/index.html
+++ b/app5K/index.html
@@ -74,6 +74,8 @@
     <!-- lib --><script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script><!-- DOM FRAMEWORK -->
     <!-- lib --><script src="https://cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script><!-- LODASH -->
     <!-- lib --><script src="app/vendor/waypoints/lib/noframework.waypoints.min.js"></script><script src="app/vendor/waypoints/lib/shortcuts/inview.min.js"></script><!-- SCROLL EVENTS -->
+    <!-- lib --><script src="app/vendor/flubber/build/flubber.min.js"></script><!-- SVG TRANSFORMS -->
+    <!-- app --><script src="app/script/svg.js"></script><!-- SVG TRANSFORMS -->
     <!-- app --><script src="app/script/main.js"></script><!-- / -->
 
     <!-- ## custom settings below-->
@@ -187,11 +189,9 @@
 
     <div id="scroll_watcher__trigger">xx</div>
     <figure class="watcher" id="scroll_watcher">
-        <svg version="1.1" id="Arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        <svg version="1.1" id="scroll_watcher__svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
              width="100px" height="42px" viewBox="0 0 100 42" style="enable-background:new 0 0 100 42;" xml:space="preserve">
-        <path d="M7.4,34.2c-0.8,1.7-8,0-7.3-1.9c0.6-1.9,27.8-1.8,30.5-2.4c9.1-2.1,17.8-4.5,26.5-8.2c2.7-1.2,37.8-12.8,36.6-16.4
-            C92.8,2.8,82.6,6,81.8,3.4s16.4-1.2,18.3-1c-1.2,2.2-4.3,15-7.9,13.1c-1.3-1.8,2.1-6,3-7.5c-10.4,7.3-23.6,12.6-35.7,16.3
-            c-7.8,2.4-17.3,8-25.6,7.8c-4-0.2-23.3,5-25.8,2.1C7.8,33.8,7.6,33.8,7.4,34.2z"/>
+        <path d="" id="scroll_watcher__path" />
         </svg>
     </figure>
     
