--- a/app5K/alps/content-data.html
+++ b/app5K/alps/content-data.html
@@ -105,6 +105,11 @@
 <li><a href="art/alps.svg">Alps, large svg image, 7Mb</a>
 </ol>
 
+<figure>
+<img src="art/alps-title.svg" alt="Alps" width="100%"><br>
+<img src="art/europe-map.svg" alt="Alps"  width="100%"><br>
+</figure>
+
 <p>v2018.viii.25</p>
 
 <h3>Эдгар Аллан По</h3>
