--- a/app5K/__alps/index.html
+++ b/app5K/__alps/index.html
@@ -65,6 +65,7 @@
         });
 </script>
 
+<div class="yiSidemenu__shadowOverlay"></div>
 <nav class="layer design-sidemenu yiSidemenu yiSidemenu--trigger">
     <h2>Sidemenu II</h2>
 </nav>
