app for click and scroll

--- a/app5K/__alps/index.html
+++ b/app5K/__alps/index.html
@@ -96,8 +96,7 @@
         hasOptions: { offset: '-1rem' },
         addClass: 'has-open-sidemenu',
         for: 'body'
-    });
-    app.do({
+    }).do({
         name: 'ClickOnShadowClosesSidemenu',
         when: '.yiSidemenu__shadowOverlay',
         has: 'click',
@@ -138,7 +137,7 @@
     <li>разоблачение преступника.
 </ol>
 
-<h3>Ганнибал Барка и слоны</h3>
+<h3 id="Barka">Ганнибал Барка и слоны</h3>
 
 <p>
 Когда Рим воевал с Карфагеном, в Испании находилась армия со слонами. Полководец Ганнибал повёл войска через Альпы. Это был тяжёлый путь. Римляне не ожидали, что кто-то сможет пересечь горы. Воины со слонами справились и прогулялись по Италии.
@@ -177,7 +176,16 @@
 Долгие годы скрывал иль который средь топей Лаврентских
 </pre>
 
-<h3>Монблан</h3>
+<h3 id="Monblan">Монблан</h3>
+<script>
+    app.do({
+        name: 'Monblan',
+        when: '#Monblan',
+        has: 'click',
+        addClass: 'addMe addMeToo',
+        toggleClass: 'toggleMe'
+    });
+</script>
 
 <p>
 К северу возвышается белая гора Mont Blanc — самая высокая вершина Альп. Князь Вяземский написал о своих впечатлениях в 1855 году:
