--- a/app5K/__alps/index.html
+++ b/app5K/__alps/index.html
@@ -56,41 +56,41 @@
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
 <!-- =================================================== [HEADER] -->
 
+<header class="layer grid block-screen">
+    <h1>Решение для букмекерской конторы</h1>
+</header>
+
 <header class="layer design-intro yiWallpaper--trigger">
-    <div class="block-header">
-        <h1>AppNotHere</h1>
-        <script>
-            document.write('script here');
-        </script>
+    <div class="grid block-header">
+        <h1>Test block</h1>
         <figure class="svg">
-            <svg version="1.1" id="SVG-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                 viewBox="0 0 100 42" style="enable-background:new 0 0 100 42;" xml:space="preserve">
-                <path
-                   id="scroll_watcher__path"
-                   d="M7.4,34.2c-0.8,1.7-8,0-7.3-1.9c0.6-1.9,27.8-1.8,30.5-2.4c9.1-2.1,17.8-4.5,26.5-8.2c2.7-1.2,37.8-12.8,36.6-16.4
-                    C92.8,2.8,82.6,6,81.8,3.4s16.4-1.2,18.3-1c-1.2,2.2-4.3,15-7.9,13.1c-1.3-1.8,2.1-6,3-7.5c-10.4,7.3-23.6,12.6-35.7,16.3
-                    c-7.8,2.4-17.3,8-25.6,7.8c-4-0.2-23.3,5-25.8,2.1C7.8,33.8,7.6,33.8,7.4,34.2z"
-                   d2="M23.5,20.5c1.2,2.4,11.8,1,14.5,3.2c-6,2.4-15.6-1.9-22.3-3.2c2.1-1.4,16.9-13.8,20.4-9.4c-1.3,3-7.1,2.8-9.1,5.3c11.5,0.9,32.9-6.8,42.8-10.1c3.6-1.2,13.5-1.6,16.6-4.2c5.5-4.7,9.3,5.2,8.8,5.2c1.1,2-15,17.2-18.3,16.4C70.5,17.3,115.5-0.8,72,8.3c-15.6,5.3-32.4,9.2-48.7,12C23.4,20.4,23.6,20.5,23.5,20.5z"
-                    />
+            <svg class="pathdance-svg1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 100 42">
+                <g class="pathdance-step step0">
+                    <path d="M7.4,34.2c-0.8,1.7-8,0-7.3-1.9c0.6-1.9,27.8-1.8,30.5-2.4c9.1-2.1,17.8-4.5,26.5-8.2c2.7-1.2,37.8-12.8,36.6-16.4C92.8,2.8,82.6,6,81.8,3.4s16.4-1.2,18.3-1c-1.2,2.2-4.3,15-7.9,13.1c-1.3-1.8,2.1-6,3-7.5c-10.4,7.3-23.6,12.6-35.7,16.3c-7.8,2.4-17.3,8-25.6,7.8c-4-0.2-23.3,5-25.8,2.1C7.8,33.8,7.6,33.8,7.4,34.2z"/>
+                </g>
+                <g class="pathdance-step step1">
+                    <path d="M23.5,20.5c1.2,2.4,11.8,1,14.5,3.2c-6,2.4-15.6-1.9-22.3-3.2c2.1-1.4,16.9-13.8,20.4-9.4c-1.3,3-7.1,2.8-9.1,5.3c11.5,0.9,32.9-6.8,42.8-10.1c3.6-1.2,13.5-1.6,16.6-4.2c5.5-4.7,9.3,5.2,8.8,5.2c1.1,2-15,17.2-18.3,16.4C70.5,17.3,115.5-0.8,72,8.3c-15.6,5.3-32.4,9.2-48.7,12C23.4,20.4,23.6,20.5,23.5,20.5z"/>
+                </g>
+                <g class="pathdance-step step2">
+                    <path d="M94.2,20c-0.2,0.7-14,10-15.5,6.3c-1.6-3.9,11.2-1.7,1.6-7.1c-4.4-2.5-8.4-5.8-13-7.8c-11.6-5-18.8-5.9-30.9-4.1c-6,0.9-15.2,3.5-17.1,9.6c-3.9,12.3,7.9,16,14.4,23.4c-6.8,5.2-19.2-15.1-18-21.2c1.3-6.8,19.8-21.4,26-16.4c5.9,2.4,13.9-1.6,20.7,3.8c4.9,3.9,16.9,9.3,23.2,10.5c0.6-2-4.1-4.7-3-6.9c1-1.9,11.1,9.6,11.3,9.6C94.1,19.9,94.3,19.8,94.2,20z"/>
+                </g>
             </svg>
         </figure>
         <script>
-            app.do({
-                name: 'H1',
-                when: 'h1',
-                has: 'click',
-                toggleClass: 'klas1',
-            });
-            app.do({
-                name: 'svgPathDemo',
-                when: '.svg',
-                has: 'click',
-                do: function(e){Pathdance.dancers["arrow"].dance.Start();}
+            zlPathdance.path({
+                name: 'pathdancesvg1Demo',
+                svg: '.pathdance-svg1',
+                timing: [{t:200},{t:200},{t:200}],
+                comeback: true,
+                loop: true
             });
         </script>
-        <script>
-            document.write('script here');
-        </script>
+        <div>
+            <script>
+                document.write('script here');
+            </script>
+        </div>
     </div>
 </header>
 <script>
@@ -98,7 +98,7 @@
         name: 'yiWallpaper',
         when: '.yiWallpaper--trigger',
         has: 'scrollTop',
-        hasOptions: { offset:'-21%' },
+        hasOptions: { offset:'50%' },
         addClass: 'has-inactive-wallpaper',
         for: 'body'
     });
@@ -119,20 +119,12 @@
 </nav>
 <script>
     app.do({
-        name: 'yiSidemenu',
-        when: '.yiWallpaper--trigger',
-        has: 'scrollTop',
-        hasOptions: { offset: '-1rem' },
-        addClass: 'has-open-sidemenu',
-        for: 'body'
-    }).do({
         name: 'ClickOnShadowClosesSidemenu',
         when: '.yiSidemenu__shadowOverlay',
         has: 'click',
         removeClass: 'has-open-sidemenu',
         for: 'body'
     });
-    app.do({trigger:'body'});
 </script>
 
 <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
@@ -153,6 +145,37 @@
         for: 'body'
     });
 </script>
+
+        <figure class="svg">
+            <svg version="1.1" id="SVG-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 100 42" style="enable-background:new 0 0 100 42;" xml:space="preserve">
+                 <g class="step step1">
+                <path
+                   id="scroll_watcher__path"
+                   d="M23.5,20.5c1.2,2.4,11.8,1,14.5,3.2c-6,2.4-15.6-1.9-22.3-3.2c2.1-1.4,16.9-13.8,20.4-9.4c-1.3,3-7.1,2.8-9.1,5.3c11.5,0.9,32.9-6.8,42.8-10.1c3.6-1.2,13.5-1.6,16.6-4.2c5.5-4.7,9.3,5.2,8.8,5.2c1.1,2-15,17.2-18.3,16.4C70.5,17.3,115.5-0.8,72,8.3c-15.6,5.3-32.4,9.2-48.7,12C23.4,20.4,23.6,20.5,23.5,20.5z"
+                    />
+                </g>
+            </svg>
+        </figure>
+        <script>
+            app.do({
+                name: 'H1',
+                when: 'h1',
+                has: 'click',
+                toggleClass: 'klas1',
+            });
+            app.do({
+                name: 'svgPathDemo',
+                when: '#SVG-1',
+                has: 'click',
+                do: function(e){Pathdance.dancers["arrow"].dance.Start();}
+            });
+        </script>
+        <div>
+            <script>
+                document.write('script here');
+            </script>
+        </div>
 
 <h3 id="Poe">Эдгар Аллан По</h3>
 
