--- a/app5K/__alps/index.html
+++ b/app5K/__alps/index.html
@@ -64,7 +64,7 @@
     <div class="grid block-header">
         <h1>Test block</h1>
         <figure class="svg">
-            <svg class="pathdance-svg1" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg id="DemoArrow" class="pathdance-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             viewBox="0 0 100 42">
                 <g class="pathdance-step step0">
                     <path d="M7.4,34.2c-0.8,1.7-8,0-7.3-1.9c0.6-1.9,27.8-1.8,30.5-2.4c9.1-2.1,17.8-4.5,26.5-8.2c2.7-1.2,37.8-12.8,36.6-16.4C92.8,2.8,82.6,6,81.8,3.4s16.4-1.2,18.3-1c-1.2,2.2-4.3,15-7.9,13.1c-1.3-1.8,2.1-6,3-7.5c-10.4,7.3-23.6,12.6-35.7,16.3c-7.8,2.4-17.3,8-25.6,7.8c-4-0.2-23.3,5-25.8,2.1C7.8,33.8,7.6,33.8,7.4,34.2z"/>
@@ -79,9 +79,9 @@
         </figure>
         <script>
             zlPathdance.path({
-                name: 'pathdancesvg1Demo',
-                svg: '.pathdance-svg1',
-                timing: [{t:200},{t:200},{t:200}],
+                name: 'd1',
+                svg: '#DemoArrow',
+                timing: [{t:250},{t:250},{t:250}],
                 comeback: true,
                 loop: true
             });
