--- a/app5K/__alps/index.html
+++ b/app5K/__alps/index.html
@@ -75,15 +75,21 @@
                 <g class="pathdance-step step2">
                     <path d="M94.2,20c-0.2,0.7-14,10-15.5,6.3c-1.6-3.9,11.2-1.7,1.6-7.1c-4.4-2.5-8.4-5.8-13-7.8c-11.6-5-18.8-5.9-30.9-4.1c-6,0.9-15.2,3.5-17.1,9.6c-3.9,12.3,7.9,16,14.4,23.4c-6.8,5.2-19.2-15.1-18-21.2c1.3-6.8,19.8-21.4,26-16.4c5.9,2.4,13.9-1.6,20.7,3.8c4.9,3.9,16.9,9.3,23.2,10.5c0.6-2-4.1-4.7-3-6.9c1-1.9,11.1,9.6,11.3,9.6C94.1,19.9,94.3,19.8,94.2,20z"/>
                 </g>
+                <g class="pathdance-step step4">
+                    <path d="M23.5,20.5c1.2,2.4,11.8,1,14.5,3.2c-6,2.4-15.6-1.9-22.3-3.2c2.1-1.4,16.9-13.8,20.4-9.4c-1.3,3-7.1,2.8-9.1,5.3c11.5,0.9,32.9-6.8,42.8-10.1c3.6-1.2,13.5-1.6,16.6-4.2c5.5-4.7,9.3,5.2,8.8,5.2c1.1,2-15,17.2-18.3,16.4C70.5,17.3,115.5-0.8,72,8.3c-15.6,5.3-32.4,9.2-48.7,12C23.4,20.4,23.6,20.5,23.5,20.5z"/>
+                </g>
             </svg>
         </figure>
         <script>
             zlPathdance.path({
-                name: 'd1',
+                name: 'PathdanceName',
                 svg: '#DemoArrow',
-                timing: [{t:250},{t:250},{t:250}],
-                comeback: true,
-                loop: true
+                timingDefault: 400,
+                //timing: [{t:250},{t:250},{t:250}],
+                comeback: false,
+                loop: true,
+                autostart: true,
+                autoloop: false
             });
         </script>
         <div>
