Ribni zapah v ofise

--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -372,9 +372,10 @@
     <a href="https://gomockingbird.com/"><i>mockingbird</i></a>
 
     <div class="a2">
+        <a href="http://jsbin.com/?html,output"><i>jsBin</i></a>
         <a href="http://jsfiddle.net/q5frq7ds/"><i>jsfiddle</i></a>
-        <a href="http://jsbin.com/?html,output" class="red bold"><i>jsBin</i></a>
     </div>
+    <a href="https://htmlg.com/html-editor/" class="red bold"><i>multi html editor</i></a>
     <a href="https://www.10bestdesign.com/dirtymarkup/"><i>Beautify</i></a>
     <a href="https://www.diffchecker.com/"><i>Diff checker</i></a>
 
