--- a/app5K/__alps/index.html
+++ b/app5K/__alps/index.html
@@ -24,20 +24,15 @@
         img, svg { max-width:100%; }
     </style>
     <!-- ## Custom settings below-->
-    <!-- ### libs -->
-    <!-- lib -->
+    <!-- ### app libs -->
         <script src="app/vendor/lodash/lodash.min.js"></script>
-        <!-- x -->
-    <!-- lib -->
         <script src="app/vendor/domtastic/domtastic.min.js"></script>
-        <!-- x -->
-    <!-- lib / SCROLL EVENTS, http://imakewebthings.com/waypoints/ -->
         <script src="app/vendor/waypoints/lib/noframework.waypoints.min.js"></script>
-        <script src="app/vendor/waypoints/lib/shortcuts/inview.min.js"></script><!-- / -->
-    <!-- lib / SVG TRANSFORMS -->
-        <script src="app/vendor/flubber/build/flubber.min.js"></script><!-- / -->
-    <!-- lib --><link href="app/vendor/sakura/css/zl_sakura.css" rel="stylesheet" type="text/css"><!-- x -->
+        <script src="app/vendor/waypoints/lib/shortcuts/inview.min.js"></script>
+        <script src="app/vendor/flubber/build/flubber.min.js"></script>
+        <!-- / -->
     <!-- ### app interface -->
+    <!-- lib --><link href="app/vendor/sakura/css/zl_sakura.css" rel="stylesheet" type="text/css"><!-- x -->
     <!-- o --><link href="app/style/app_interface.css" rel="stylesheet" type="text/css" media="all" /><!-- x -->
     <!-- o --><script src="app/script/app_interface.js"></script><!-- x -->
     <!-- o --><script src="app/script/svg.js"></script><!-- x -->
@@ -72,26 +67,26 @@
                 <g class="pathdance-step step1">
                     <path d="M23.5,20.5c1.2,2.4,11.8,1,14.5,3.2c-6,2.4-15.6-1.9-22.3-3.2c2.1-1.4,16.9-13.8,20.4-9.4c-1.3,3-7.1,2.8-9.1,5.3c11.5,0.9,32.9-6.8,42.8-10.1c3.6-1.2,13.5-1.6,16.6-4.2c5.5-4.7,9.3,5.2,8.8,5.2c1.1,2-15,17.2-18.3,16.4C70.5,17.3,115.5-0.8,72,8.3c-15.6,5.3-32.4,9.2-48.7,12C23.4,20.4,23.6,20.5,23.5,20.5z"/>
                 </g>
-                <g class="pathdance-step--- step2">
+                <g class="pathdance-step step2">
                     <path d="M94.2,20c-0.2,0.7-14,10-15.5,6.3c-1.6-3.9,11.2-1.7,1.6-7.1c-4.4-2.5-8.4-5.8-13-7.8c-11.6-5-18.8-5.9-30.9-4.1c-6,0.9-15.2,3.5-17.1,9.6c-3.9,12.3,7.9,16,14.4,23.4c-6.8,5.2-19.2-15.1-18-21.2c1.3-6.8,19.8-21.4,26-16.4c5.9,2.4,13.9-1.6,20.7,3.8c4.9,3.9,16.9,9.3,23.2,10.5c0.6-2-4.1-4.7-3-6.9c1-1.9,11.1,9.6,11.3,9.6C94.1,19.9,94.3,19.8,94.2,20z"/>
                 </g>
-                <g class="pathdance-step--- step3">
+                <g class="pathdance-step step3">
                     <path d="M23.5,20.5c1.2,2.4,11.8,1,14.5,3.2c-6,2.4-15.6-1.9-22.3-3.2c2.1-1.4,16.9-13.8,20.4-9.4c-1.3,3-7.1,2.8-9.1,5.3c11.5,0.9,32.9-6.8,42.8-10.1c3.6-1.2,13.5-1.6,16.6-4.2c5.5-4.7,9.3,5.2,8.8,5.2c1.1,2-15,17.2-18.3,16.4C70.5,17.3,115.5-0.8,72,8.3c-15.6,5.3-32.4,9.2-48.7,12C23.4,20.4,23.6,20.5,23.5,20.5z"/>
                 </g>
             </svg>
         </figure>
         <script>
-            zlPathdance.path({
+            /*zlPathdance.path({
                 name: 'PathdanceName',
                 svg: '#DemoArrow',
                 loop: true,
                 single: true, // not ready
                 timingDefault: 250,
-                timing: [{t:250},{t:0}],
+                //timing: [{t:250},{t:0}],
                 //DEL comeback: true,
                 autostart: true,
                 autoloop: false
-            });
+            });*/
         </script>
         <div>
             <script>
@@ -153,36 +148,61 @@
     });
 </script>
 
-        <figure class="svg">
-            <svg version="1.1" id="SVG-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+
+
+<section>
+    <h3>change on click</h3>
+        <figure class="svg" id="SVG-TASK1-CONTAINER">
+            <svg version="1.1" id="SVG-TASK1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 100 42" style="enable-background:new 0 0 100 42;" xml:space="preserve">
-                 <g class="step step1">
-                <path
-                   id="scroll_watcher__path"
-                   d="M23.5,20.5c1.2,2.4,11.8,1,14.5,3.2c-6,2.4-15.6-1.9-22.3-3.2c2.1-1.4,16.9-13.8,20.4-9.4c-1.3,3-7.1,2.8-9.1,5.3c11.5,0.9,32.9-6.8,42.8-10.1c3.6-1.2,13.5-1.6,16.6-4.2c5.5-4.7,9.3,5.2,8.8,5.2c1.1,2-15,17.2-18.3,16.4C70.5,17.3,115.5-0.8,72,8.3c-15.6,5.3-32.4,9.2-48.7,12C23.4,20.4,23.6,20.5,23.5,20.5z"
-                    />
+                <g class="pathdance-step step0">
+                    <path d="M7.4,34.2c-0.8,1.7-8,0-7.3-1.9c0.6-1.9,27.8-1.8,30.5-2.4c9.1-2.1,17.8-4.5,26.5-8.2c2.7-1.2,37.8-12.8,36.6-16.4C92.8,2.8,82.6,6,81.8,3.4s16.4-1.2,18.3-1c-1.2,2.2-4.3,15-7.9,13.1c-1.3-1.8,2.1-6,3-7.5c-10.4,7.3-23.6,12.6-35.7,16.3c-7.8,2.4-17.3,8-25.6,7.8c-4-0.2-23.3,5-25.8,2.1C7.8,33.8,7.6,33.8,7.4,34.2z"/>
+                </g>
+                <g class="pathdance-step step1">
+                    <path d="M23.5,20.5c1.2,2.4,11.8,1,14.5,3.2c-6,2.4-15.6-1.9-22.3-3.2c2.1-1.4,16.9-13.8,20.4-9.4c-1.3,3-7.1,2.8-9.1,5.3c11.5,0.9,32.9-6.8,42.8-10.1c3.6-1.2,13.5-1.6,16.6-4.2c5.5-4.7,9.3,5.2,8.8,5.2c1.1,2-15,17.2-18.3,16.4C70.5,17.3,115.5-0.8,72,8.3c-15.6,5.3-32.4,9.2-48.7,12C23.4,20.4,23.6,20.5,23.5,20.5z"/>
                 </g>
             </svg>
         </figure>
         <script>
-            app.do({
-                name: 'H1',
-                when: 'h1',
-                has: 'click',
-                toggleClass: 'klas1',
+            app.Pathdance.describe({
+                name:       'pathTaskOne',
+                svg:        '#SVG-TASK1',
+                loop: false
             });
             app.do({
-                name: 'svgPathDemo',
-                when: '#SVG-1',
+                name: 'pathTaskOne__Click',
+                when: '#SVG-TASK1-CONTAINER',
                 has: 'click',
-                do: function(e){Pathdance.dancers["arrow"].dance.Start();}
+                do: function(e){ app.Pathdance.run('pathTaskOne') }
             });
         </script>
-        <div>
-            <script>
-                document.write('script here');
-            </script>
-        </div>
+    <h3>loop animation on click</h3>
+        <figure class="svg" id="SVG-TASK2-CONTAINER">
+            <svg version="1.1" id="SVG-TASK2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 100 42" style="enable-background:new 0 0 100 42;" xml:space="preserve">
+                <g class="pathdance-step step0">
+                    <path d="M7.4,34.2c-0.8,1.7-8,0-7.3-1.9c0.6-1.9,27.8-1.8,30.5-2.4c9.1-2.1,17.8-4.5,26.5-8.2c2.7-1.2,37.8-12.8,36.6-16.4C92.8,2.8,82.6,6,81.8,3.4s16.4-1.2,18.3-1c-1.2,2.2-4.3,15-7.9,13.1c-1.3-1.8,2.1-6,3-7.5c-10.4,7.3-23.6,12.6-35.7,16.3c-7.8,2.4-17.3,8-25.6,7.8c-4-0.2-23.3,5-25.8,2.1C7.8,33.8,7.6,33.8,7.4,34.2z"/>
+                </g>
+                <g class="pathdance-step step1">
+                    <path d="M23.5,20.5c1.2,2.4,11.8,1,14.5,3.2c-6,2.4-15.6-1.9-22.3-3.2c2.1-1.4,16.9-13.8,20.4-9.4c-1.3,3-7.1,2.8-9.1,5.3c11.5,0.9,32.9-6.8,42.8-10.1c3.6-1.2,13.5-1.6,16.6-4.2c5.5-4.7,9.3,5.2,8.8,5.2c1.1,2-15,17.2-18.3,16.4C70.5,17.3,115.5-0.8,72,8.3c-15.6,5.3-32.4,9.2-48.7,12C23.4,20.4,23.6,20.5,23.5,20.5z"/>
+                </g>
+            </svg>
+        </figure>
+        <script>
+            app.Pathdance.describe({
+                name:       'pathTaskOne2',
+                svg:        '#SVG-TASK2',
+                loop: true
+            });
+            app.do({
+                name: 'pathTaskOne__Click2',
+                when: '#SVG-TASK2-CONTAINER',
+                has: 'click',
+                do: function(e){ app.Pathdance.run('pathTaskOne2') }
+            });
+        </script>
+</section>
+
 
 <h3 id="Poe">Эдгар Аллан По</h3>
 
