app5k queen is better

--- a/app5K/__alps/index.html
+++ b/app5K/__alps/index.html
@@ -151,6 +151,26 @@
 
 
 <section>
+    <h3 class="el-mutate-target">queen virus action</h3>
+    <script>
+        app.Pathdance.registration({
+            name:       'qqq1',
+            svg:        '#qqq1'
+        });
+        app.forload(function(){
+            console.log('hello, afterload');
+            app.mutate({
+                el:'.el-mutate-target',
+                addClass: 'newclass'
+            });
+        });
+    </script>
+
+
+
+
+
+
     <h3>change on click</h3>
         <figure class="svg" id="SVG-TASK1-CONTAINER">
             <svg version="1.1" id="SVG-TASK1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
