--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -214,6 +214,7 @@
     <a href="http://elementy.ru/"><i>elementy.ru</i></a>
     <a href="https://biomolecula.ru/"><i>biomolecula.ru</i></a>
     <a href="https://nplus1.ru/"><i>n+1</i></a>
+       <a href="https://golovanov.net/">golovanov.net</a>
         </section>
     </article>
 
