codepause app-seed II

--- a/app5K/__appSeed/index.html
+++ b/app5K/__appSeed/index.html
@@ -21,24 +21,17 @@
     <!-- =================================================== [HEAD ENGINE] -->
 
     <!-- ## Critical Bootstrap CSS -->
-
     <style>
         html { margin:0; padding:0; }
         body { margin:0; padding:1rem; }
         img, svg { max-width:100%; }
     </style>
 
-    <!-- ## PREFETCH -->
 
-    <!-- ## CSS -->
-
-    <!-- app --><link href="app/style/ordnung.css" rel="stylesheet" type="text/css" media="all" /><!-- / -->
-
-    <!-- ## JS -->
-
-    <!-- app --><script src="app/script/ordnung.js"></script><!-- / -->
-
-    <!-- ## custom settings below-->
+    <!-- ## Custom settings below-->
+    <link href="app/style/ordnung.css" rel="stylesheet" type="text/css" media="all" />
+    <script src="app/script/ordnung.js"></script>
+    <!-- / -->
 
     <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
     <!-- =================================================== [HEAD OTHERS] -->
